Fix JS-disabled error message not showing up

--- a/assets/src/styles/partials/_script.scss
+++ b/assets/src/styles/partials/_script.scss
@@ -1,2 +1,2 @@
 body .has-script { display: none; }
-body.js .no-script { display: none; }
+body.js .has-script { display: block; }
